docs/cycles/v1.18.2/history/inception.md
# Inception Phase 履歴

## 2026-03-02 09:24:04 JST

- **フェーズ**: サイクルセットアップ
- **実行内容**: サイクル開始
- **プロンプト**: -
- **成果物**: docs/cycles/v1.18.2/（サイクルディレクトリ）
- **備考**: -

---
## 2026-03-02 09:35:54 JST

- **フェーズ**: Inception Phase
- **ステップ**: AIレビュー完了
- **実行内容**: 【AIレビュー完了】指摘0件
【対象タイミング】Intent承認前
【対象成果物】docs/cycles/v1.18.2/requirements/intent.md
【レビュー種別】inception
【レビューツール】codex

---
## 2026-03-02 09:44:09 JST

- **フェーズ**: Inception Phase
- **ステップ**: セミオート自動承認
- **実行内容**: 【セミオート自動承認】
【承認ポイントID】inception.intent.approval
【判定結果】auto_approved
【AIレビュー結果】指摘0件

---
## 2026-03-02 12:52:33 JST

- **フェーズ**: Inception Phase
- **ステップ**: AIレビュー完了
- **実行内容**: 【AIレビュー完了】指摘0件
【対象タイミング】ユーザーストーリー承認前
【対象成果物】docs/cycles/v1.18.2/story-artifacts/user_stories.md
【レビュー種別】inception
【レビューツール】codex

---
## 2026-03-02 12:54:50 JST

- **フェーズ**: Inception Phase
- **ステップ**: セミオート自動承認
- **実行内容**: 【セミオート自動承認】
【承認ポイントID】inception.stories.approval
【判定結果】auto_approved
【AIレビュー結果】指摘0件

---
## 2026-03-02 14:26:55 JST

- **フェーズ**: Inception Phase
- **ステップ**: AIレビュー完了
- **実行内容**: 【AIレビュー完了】指摘0件
【対象タイミング】Unit定義承認前
【対象成果物】Unit定義（001-005）
【レビュー種別】inception
【レビューツール】codex

---
## 2026-03-02 14:29:39 JST

- **フェーズ**: Inception Phase
- **ステップ**: Inception Phase完了
- **実行内容**: Inception Phase全ステップ完了。Intent/ユーザーストーリー/Unit定義(5 Units)/PRFAQ作成済み。
- **成果物**:
  - `docs/cycles/v1.18.2/requirements/intent.md, docs/cycles/v1.18.2/story-artifacts/user_stories.md, docs/cycles/v1.18.2/story-artifacts/units/001-005, docs/cycles/v1.18.2/requirements/prfaq.md`

---
