docs/cycles/v1.19.1/history/inception.md
# Inception Phase 履歴

## 2026-03-08 14:34:00 JST

- **フェーズ**: サイクルセットアップ
- **実行内容**: サイクル開始
- **プロンプト**: -
- **成果物**: docs/cycles/v1.19.1/（サイクルディレクトリ）
- **備考**: -

---
## 2026-03-08 14:43:34 JST

- **フェーズ**: Inception Phase
- **ステップ**: AIレビュー完了
- **実行内容**: 【AIレビュー完了】指摘0件
【対象タイミング】Intent承認前
【対象成果物】docs/cycles/v1.19.1/requirements/intent.md
【レビュー種別】inception
【レビューツール】codex

---
## 2026-03-08 14:44:06 JST

- **フェーズ**: Inception Phase
- **ステップ**: セミオート自動承認
- **実行内容**: 【セミオート自動承認】
【承認ポイントID】inception.intent.approval
【判定結果】auto_approved
【AIレビュー結果】指摘0件

---
## 2026-03-08 14:51:29 JST

- **フェーズ**: Inception Phase
- **ステップ**: AIレビュー完了
- **実行内容**: 【AIレビュー完了】指摘0件
【対象タイミング】ユーザーストーリー承認前
【対象成果物】docs/cycles/v1.19.1/story-artifacts/user_stories.md
【レビュー種別】inception
【レビューツール】codex

---
## 2026-03-08 14:52:06 JST

- **フェーズ**: Inception Phase
- **ステップ**: セミオート自動承認
- **実行内容**: 【セミオート自動承認】
【承認ポイントID】inception.stories.approval
【判定結果】auto_approved
【AIレビュー結果】指摘0件

---
## 2026-03-08 14:58:03 JST

- **フェーズ**: Inception Phase
- **ステップ**: AIレビュー完了
- **実行内容**: 【AIレビュー完了】指摘0件
【対象タイミング】Unit定義承認前
【対象成果物】Unit定義（001-006）
【レビュー種別】inception
【レビューツール】codex

---
## 2026-03-08 14:58:50 JST

- **フェーズ**: Inception Phase
- **ステップ**: セミオート自動承認
- **実行内容**: 【セミオート自動承認】Unit定義承認
【シグナル】auto_approved
【条件】automation_mode=semi_auto、codexによる外部AIレビュー指摘0件達成、フォールバック条件なし

---
## 2026-03-08 15:00:58 JST

- **フェーズ**: Inception Phase
- **ステップ**: Inception Phase完了
- **実行内容**: 【Inception Phase完了】v1.19.1
【成果物】Intent, ユーザーストーリー(7件), Unit定義(6件), PRFAQ
【対象Issue】#285, #286, #287, #288, #289, #282, #283
【サイクルラベル】cycle:v1.19.1（7件のIssueに付与）

---
